--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dm2k (2.6.2+20120423-2) UNRELEASED; urgency=low
+
+  * debian/control: fix minor Multi-Arch issue
+
+ -- Ralph Lange <Ralph.Lange@gmx.de>  Tue, 24 Sep 2013 14:28:21 +0200
+
 dm2k (2.6.2+20120423-1) unstable; urgency=low
 
   * Initial release
